--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    test {
+        useJUnitPlatform()
+    }
 }
 
 tasks.named('bootBuildImage') {
