--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,11 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     // MySql
     runtimeOnly 'com.mysql:mysql-connector-j'
+    // Test용 DB
+    runtimeOnly 'com.h2database:h2'
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:4.8.0'
     // JWT
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
